# turing

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: STACK.md
notebooks/: balanced_parentheses_part1.ipynb  balanced_parentheses_part2.ipynb  siegelmann_sontag.ipynb
scripts/: make_bpstack_apng.py  make_bptape_apng.py  make_cantor_set_animation.py  make_cantor_set_apng.py  make_stack_curses.py  make_tm_graph_png.py  make_turing_machine_animation.py  make_turing_machine_graph_png.py  make_turing_machine_png.py  terminal_colors.json
src/turing/: balanced_parentheses.py  functional.py  graph.py  networks.py  translators.py  types.py
src/turing/ss/: networks.py  simulator.py
src/turing/wcm/: networks.py  simulator.py
test/: helper.py  test_adder.py  test_binary_search.py  test_decoder.py  test_get_initial_symbol.py  test_get_last_written_symbol.py  test_indicate_visited_position.py
test/ss/: helper.py  test_configuration_detector1.py  test_configuration_detector4.py  test_description.py  test_siegelman_sontag1.py  test_siegelman_sontag4.py  test_simulate_ss1.py
test/wcm/: helper.py  test_adder.py  test_binary_search.py  test_decoder.py  test_get_initial_symbol.py  test_get_last_written_symbol.py  test_indicate_visited_position.py
